--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,47 @@
 h1 {
   text-align: center;
 }
+.heb-text {
+  direction: rtl;
+  float: right;
+  margin-top: 10%;
+}
+footer {
+  background-color: #6998ab;
+  color: black;
+  text-align: center;
+  padding: 4%;
+}
+a:hover {
+  color: maroon;
+  text-decoration: none;
+}
+
+.pages-text {
+  width: 85%;
+  text-align: justify;
+  margin: auto;
+  padding-top: 2%;
+}
+.copyright {
+  color: white;
+}
+.tamir {
+  color: bisque;
+}
+.logo {
+  color: white;
+}
+.logo:hover {
+  color: maroon;
+}
+.footer-info {
+  margin: 0 auto;
+}
 
 @media only screen and (max-width: 440px) {
   .content-container {
-    margin: 30% 0 4%;
+    margin: 30% 0 0;
   }
 
   h1 {
@@ -21,16 +58,18 @@ h1 {
     margin-bottom: 50%;
     padding-left: 2%;
   }
-  .about-text {
-    width: 80%;
-    text-align: justify;
-    margin: auto;
-    padding-top: 9%;
+
+  .logo {
+    font-size: 2em;
+    margin: auto 0.3%;
+  }
+  .copyright {
+    font-size: 0.77rem;
   }
 }
 @media only screen and (min-width: 440px) {
   .content-container {
-    margin-top: 17%;
+    margin-top: 20%;
   }
 
   h1 {
@@ -46,18 +85,24 @@ h1 {
   span {
     display: block;
     margin-bottom: 19%;
-    padding-left: 2%;
+    padding-left: 3%;
   }
-  .about-text {
+  .pages-text {
     width: 80%;
     text-align: justify;
     margin: auto;
     padding-top: 9%;
   }
+  .logo {
+    font-size: 2.6em;
+  }
+  .copyright {
+    font-size: 0.9rem;
+  }
 }
 @media only screen and (min-width: 768px) {
   .content-container {
-    margin: 10% 0;
+    margin: 10% 0 0;
   }
 
   .img-block {
@@ -75,11 +120,18 @@ h1 {
   .about-img {
     padding: 20% 13% 0 0;
   }
-  .about-text {
+  .pages-text {
     width: 55%;
     text-align: justify;
     margin: auto;
     padding-top: 2%;
+  }
+  .logo {
+    font-size: 2em;
+    margin: auto 0.3%;
+  }
+  .copyright {
+    font-size: 0.77rem;
   }
 }
 @media only screen and (min-width: 1024px) {
@@ -87,7 +139,7 @@ h1 {
     font-size: 3rem;
   }
   .content-container {
-    margin: 6% 0;
+    margin: 6% 0 0;
   }
 
   .img-block {
