--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,24 @@
 h1 {
   text-align: center;
+  font-family: "Roboto";
+  font-weight: 600;
 }
 .heb-text {
   direction: rtl;
   display: block;
+  padding-top: 5%;
 }
+
 footer {
   display: block;
   background-color: #6998ab;
   color: black;
   text-align: center;
   padding: 2%;
+}
+
+.pages-text li {
+  padding-top: 0.5%;
 }
 a:hover {
   color: maroon;
@@ -21,7 +29,7 @@ a:hover {
   width: 85%;
   text-align: justify;
   margin: auto;
-  padding-top: 2%;
+  padding: 5% 0;
 }
 .copyright {
   color: white;
