--- a/public/style.css
+++ b/public/style.css
@@ -131,7 +131,6 @@ a:hover {
   img {
     width: 60%;
     height: 60%;
-    display: inline;
   }
 
   .about-img {
@@ -162,8 +161,24 @@ a:hover {
     margin: 6% 0 0;
   }
   img {
-    height: 45%;
-    width: 45%;
+    height: 50%;
+    max-width: 50%;
+  }
+
+  .img-block {
+    margin-top: 1%;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  h1 {
+    font-size: 3rem;
+  }
+  .content-container {
+    margin: 6% 0 0;
+  }
+  img {
+    height: 40%;
+    max-width: 40%;
   }
 
   .img-block {
