media query changes

--- a/public/style.css
+++ b/public/style.css
@@ -81,40 +81,53 @@ a:hover {
 }
 @media only screen and (min-width: 440px) {
   .content-container {
-    margin-top: 20%;
+    margin-top: 13%;
   }
+
   .pages-text li {
     padding-top: 0.5%;
     font-size: 1rem;
   }
+
   h1 {
     font-size: 2rem;
   }
+
   img {
-    max-width: 66%;
+    max-width: 70%;
     display: block;
-    margin: 0 3%;
+    margin: 4% auto;
     position: relative;
+  }
+
+  .about-img {
+    display: block;
+    margin-bottom: 50%;
+    padding-left: 15%;
   }
 
   span {
     display: block;
     margin-bottom: 19%;
   }
+
   .pages-text {
     text-align: justify;
     margin: auto;
     padding-top: 9%;
   }
+
   .logo {
     font-size: 2.6em;
   }
+
   .copyright {
     font-size: 0.9rem;
   }
 }
 @media only screen and (min-width: 768px) {
   h1 {
+    padding-top: 3%;
     font-size: 3rem;
   }
   .content-container {
@@ -122,21 +135,23 @@ a:hover {
   }
 
   .img-block {
-    margin: 14% auto;
+    margin: 5% auto 40%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: end;
   }
 
   img {
-    width: 50%;
+    width: 70%;
+    margin: 0;
   }
 
   .about-img {
     font-size: 1rem;
     font-family: "roboto";
     font-weight: 600;
-    margin-bottom: 0%;
+    margin: 0;
+    padding-left: 0;
   }
   .pages-text {
     width: 75%;
@@ -161,11 +176,12 @@ a:hover {
     margin: 6% 0 0;
   }
   img {
-    max-width: 40%;
+    max-width: 56%;
   }
 
   .img-block {
-    margin-top: 1%;
+    display: inline-flex;
+    justify-content: space-evenly;
   }
   ul {
     line-height: 2.2;
@@ -174,11 +190,19 @@ a:hover {
 @media only screen and (min-width: 1300px) {
   h1 {
     font-size: 3rem;
+    margin-bottom: 2%;
   }
   .content-container {
     margin: 6% 0 0;
   }
   img {
-    max-width: 38%;
+    max-width: 40%;
+    display: inline;
+    margin: auto 2% auto 27%;
+  }
+  .img-block {
+    margin-top: 0;
+    justify-content: unset;
+    margin-bottom: 16%;
   }
 }
