media query changes

--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,14 @@ p {
   font-weight: bold;
 }
 
+hr {
+  border: none;
+  border-top: 3px double #333;
+  color: #333;
+  overflow: visible;
+  text-align: center;
+  height: 5px;
+}
 footer {
   display: block;
   background-color: #6998ab;
@@ -134,6 +142,61 @@ a:hover {
     margin: 10% 0 0;
   }
 
+  .ex-imgs {
+    display: flex;
+  }
+  
+  .img-block {
+    margin: 5% auto 40%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+  }
+
+  img {
+    width: 70%;
+    margin: 0;
+  }
+
+  .about-img {
+    font-size: 1rem;
+    font-family: "roboto";
+    font-weight: 600;
+    margin: 0;
+    padding-left: 0;
+  }
+  .pages-text {
+    width: 75%;
+    text-align: justify;
+    margin: auto;
+    padding-top: 2%;
+  }
+  .logo {
+    font-size: 2em;
+    margin: auto 0.3%;
+  }
+  .copyright {
+    font-size: 0.77rem;
+  }
+@media only screen and (min-width: 768px) {
+  h1 {
+    padding-top: 3%;
+    font-size: 3rem;
+  }
+  .content-container {
+    margin: 10% 0 0;
+  }
+
+  .ex-imgs {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .ex-imgs img {
+width: 40%; 
+margin: 0
+
+}
+
   .img-block {
     margin: 5% auto 40%;
     display: flex;
@@ -169,6 +232,7 @@ a:hover {
 }
 @media only screen and (min-width: 1024px) {
   h1 {
+    padding-top: 1%;
     font-size: 3rem;
     margin-bottom: 5%;
   }
@@ -203,6 +267,6 @@ a:hover {
   .img-block {
     margin-top: 0;
     justify-content: unset;
-    margin-bottom: 16%;
+    margin-bottom: 17%;
   }
 }
