--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-/**********************************HTML ELEMENTS*******/
-
 h1 {
   text-align: center;
   font-family: "Roboto";
@@ -87,7 +85,17 @@ footer {
     display: block;
     padding-left: 3%;
   }
-
+  .avatar {
+    max-width: 80%;
+    margin: 4% auto;
+  }
+  ex-imgs {
+    display: flex;
+  }
+  .ex-imgs img {
+    width: 100%;
+    padding: 3%;
+  }
   /**********************************Footer*******/
 
   .logo {
@@ -190,12 +198,13 @@ footer {
   .ex-imgs {
     display: flex;
     justify-content: space-evenly;
+    padding: 2%;
   }
 
   .ex-imgs img {
-    width: 40%;
-    margin: 0;
+    padding: 3%;
   }
+
   /**********************************FOOTER*******/
 
   .logo {
@@ -260,5 +269,15 @@ footer {
   .img-block {
     justify-content: space-evenly;
     margin-bottom: 17%;
+  }
+  .ex-imgs {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0;
+  }
+
+  .ex-imgs img {
+    padding: 3%;
+    max-width: 60%;
   }
 }
