--- a/public/style.css
+++ b/public/style.css
@@ -266,8 +266,8 @@ footer {
       line-height: 2.2;
     }
     .index-img {
-      width: 40%;
-      margin-top: 8%;
+      width: 60%;
+      margin-top: 10%;
     }
   }
 
@@ -298,7 +298,10 @@ footer {
   .img-block img {
     max-width: 30%;
   }
-
+  .index-img {
+    width: 40%;
+    margin-top: 4%;
+  }
   .img-block {
     justify-content: space-evenly;
     margin-bottom: 17%;
