--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,3 @@
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-  html {
-    transform: rotate(-90deg);
-    transform-origin: left top;
-    width: 100vh;
-    overflow-x: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
-  }
-}
-
 h1 {
   text-align: center;
   font-family: "Roboto";
@@ -45,6 +33,7 @@ a:hover {
   width: 85%;
   margin: auto auto 24%;
   padding: 5% 0;
+  text-align: justify;
 }
 .pages-text li {
   padding-top: 0.5%;
@@ -53,7 +42,7 @@ a:hover {
 .avatar {
   width: 47%;
   display: block;
-  margin-top: 2%;
+  margin-top: 9%;
 }
 /**********************************Footer*******/
 
@@ -63,7 +52,7 @@ footer {
   color: black;
   text-align: center;
   margin-top: 10%;
-  position: fixed;
+  /* position: fixed; */
 }
 .copyright {
   color: white;
@@ -119,7 +108,7 @@ footer {
   /**********************************PAGES*******/
 
   .content-container {
-    margin: 30% 0 29%;
+    margin: 30% 0 13%;
   }
 
   .about-img {
@@ -156,7 +145,7 @@ footer {
     font-size: 2rem;
   }
   .index-img {
-    width: 75%;
+    width: 60%;
     margin-top: 23%;
   }
   .content-container {
@@ -262,7 +251,7 @@ footer {
     width: 45%;
   }
   .avatar {
-    margin-top: 3%;
+    margin: 3% 0 6%;
     width: 35%;
   }
 
@@ -292,14 +281,15 @@ footer {
   }
 
   .img-block img {
-    width: 40%;
+    width: 49%;
   }
+
   ul {
     line-height: 2.2;
   }
   .index-img {
     width: 43%;
-    margin-top: 10%;
+    margin-top: 9%;
   }
   .ex-imgs img {
     max-width: 38%;
@@ -324,11 +314,15 @@ footer {
   }
 
   .img-block {
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-bottom: 17%;
   }
   .ex-imgs img {
     max-width: 30%;
+  }
+  .index-img {
+    width: 30%;
+    margin-top: 11%;
   }
 }
 
@@ -348,8 +342,7 @@ footer {
   }
 
   .index-img {
-    width: 35%;
-    margin-top: 7%;
+    width: 24%;
   }
   .img-block {
     justify-content: space-evenly;
