--- a/public/style.css
+++ b/public/style.css
@@ -214,13 +214,13 @@ footer {
 
   /**********************************PAGES*******/
   .img-block {
-    margin: 8% auto 37%;
+    margin: 5% auto 37%;
     display: flex;
     align-items: end;
     justify-content: space-evenly;
   }
   .img-block span {
-    width: 11%;
+    width: 26%;
   }
   .img-block img {
     width: 59%;
@@ -279,7 +279,7 @@ footer {
   }
 
   .img-block img {
-    width: 49%;
+    width: 44%;
   }
 
   ul {
@@ -340,7 +340,8 @@ footer {
   }
 
   .index-img {
-    width: 24%;
+    margin-top: 9%;
+    width: 28%;
   }
   .img-block {
     justify-content: space-evenly;
