--- a/public/style.css
+++ b/public/style.css
@@ -52,7 +52,8 @@ footer {
   color: black;
   text-align: center;
   margin-top: 10%;
-  /* position: fixed; */
+  position: fixed;
+  bottom: 0;
 }
 .copyright {
   color: white;
@@ -68,8 +69,6 @@ footer {
   color: maroon;
 }
 footer {
-  /* position: fixed; */
-  bottom: 0;
   width: 100%;
 }
 .footer-info {
@@ -81,7 +80,7 @@ footer {
   align-items: center;
 }
 .index-img {
-  width: 50%;
+  max-width: 50%;
   margin-top: 9%;
 }
 
@@ -92,8 +91,8 @@ footer {
     font-size: 2rem;
   }
   .index-img {
-    width: 100%;
-    margin-top: 35%;
+    max-width: 100%;
+    margin-top: 2%;
   }
 
   .img-block img {
@@ -145,8 +144,8 @@ footer {
     font-size: 2rem;
   }
   .index-img {
-    width: 60%;
-    margin-top: 23%;
+    max-width: 60%;
+    margin-top: 2%;
   }
   .content-container {
     margin-top: 13%;
@@ -208,8 +207,8 @@ footer {
   }
 
   .index-img {
-    width: 51%;
-    margin-top: 15%;
+    max-width: 51%;
+    margin-top: 2%;
   }
 
   /**********************************PAGES*******/
@@ -286,8 +285,8 @@ footer {
     line-height: 2.2;
   }
   .index-img {
-    width: 43%;
-    margin-top: 9%;
+    max-width: 37%;
+    margin-top: 4%;
   }
   .ex-imgs img {
     max-width: 38%;
@@ -319,8 +318,8 @@ footer {
     max-width: 30%;
   }
   .index-img {
-    width: 30%;
-    margin-top: 11%;
+    max-width: 30%;
+    margin-top: 2%;
   }
 }
 
@@ -340,8 +339,8 @@ footer {
   }
 
   .index-img {
-    margin-top: 9%;
-    width: 28%;
+    margin-top: 2%;
+    max-width: 28%;
   }
   .img-block {
     justify-content: space-evenly;
