--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ a:hover {
 .pages-text {
   width: 85%;
   margin: auto auto 24%;
-  padding: 5% 0;
+  padding: 2% 0;
   text-align: justify;
 }
 .pages-text li {
@@ -83,6 +83,16 @@ footer {
   margin-top: 9%;
 }
 
+.awards {
+  margin-top: 12%;
+  width: 180%;
+  font-size: 1.1rem;
+  justify-content: unset;
+}
+
+td :nth-of-type(0) {
+  width: 900%;
+}
 /*****************************************************MOBILE ***********************************/
 
 @media only screen and (max-width: 440px) {
@@ -103,6 +113,7 @@ footer {
     max-width: 90%;
     margin: 0 auto;
   }
+
   /**********************************PAGES*******/
 
   .content-container {
@@ -248,7 +259,6 @@ footer {
     width: 75%;
     text-align: justify;
     margin: auto;
-    padding-top: 2%;
   }
   .ex-imgs {
     display: flex;
@@ -350,7 +360,7 @@ footer {
   }
   .img-block {
     justify-content: space-evenly;
-    margin-bottom: 17%;
+    margin-bottom: 21%;
   }
   .avatar {
     width: 20%;
