--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,9 @@ a:hover {
   font-size: 0.9rem;
 }
 
+.index-img{
+  overflow: -moz-hidden-scrollable;
+}
 .avatar {
   width: 47%;
   display: block;
@@ -82,7 +85,7 @@ footer {
 }
 .index-img {
   max-width: 100%;
-]
+
 }
 
 .awards {
@@ -101,10 +104,11 @@ td :nth-of-type(0) {
   h1 {
     font-size: 2rem;
   }
-  .index-img {
-    max-width: 200%;
+.index-img {
+  width: 1400px;
+  height: 780px;
+  object-fit: cover ;
   }
-
   .img-block img {
     width: 96%;
     display: block;
@@ -138,6 +142,9 @@ td :nth-of-type(0) {
     margin: 0 auto auto;
   }
 
+  .contact-text{
+    border: 1px solid black;
+  }
   /**********************************Footer*******/
 
   .logo {
@@ -155,7 +162,9 @@ td :nth-of-type(0) {
     font-size: 2rem;
   }
   .index-img {
-
+  width: 1400px;
+  height: 780px;
+  object-fit: cover ;
   }
   .content-container {
     margin-top: 13%;
@@ -216,8 +225,7 @@ td :nth-of-type(0) {
     font-size: 3rem;
   }
 
-  .index-img {
-  }
+ 
 
   /**********************************PAGES*******/
   .img-block {
@@ -347,10 +355,18 @@ td :nth-of-type(0) {
   .img-block img {
     max-width: 33%;
   }
-
-  .index-img {
-
-  }
+nav{
+  font-size: 1.3rem;
+}
+ .container a{
+   margin-bottom: 0;
+ }
+ .logo {
+   font-size: 2.4rem;
+ }
+ .copyright{
+   font-size: 1rem;
+ }
   .img-block {
     justify-content: space-evenly;
     margin-bottom: 21%;
@@ -359,4 +375,9 @@ td :nth-of-type(0) {
     width: 20%;
     display: block;
   }
+  .index-img {
+    width: 1600px;
+    height: 780px;
+    object-fit: cover;
+}
 }
