--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,10 @@ p {
   font-family: "Roboto";
   font-weight: bold;
 }
-
+.index{
+  margin: 0 auto;
+  width: 90%;
+}
 hr {
   border: none;
   border-top: 3px double #333;
@@ -41,14 +44,13 @@ a:hover {
   font-size: 0.9rem;
 }
 
-.index-img{
-  overflow: -moz-hidden-scrollable;
-}
 .avatar {
   width: 47%;
   display: block;
   margin-top: 9%;
 }
+
+
 /**********************************Footer*******/
 
 footer {
@@ -83,11 +85,24 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.index-img {
-  max-width: 100%;
-
+.ex-table{
+  display: flex;
+  flex-direction: column;
+line-height: 1.2;
 }
 
+.ex-content table{
+  width: 100%;
+}
+ .ex-table td, tr{
+  vertical-align: baseline;
+  line-height: 1.2;
+  font-size: 0.8rem;
+ }
+
+.spaceinbetween{
+  visibility: hidden;
+}
 .awards {
   margin-top: 12%;
   width: 180%;
@@ -95,19 +110,17 @@ footer {
   justify-content: unset;
 }
 
-td :nth-of-type(0) {
-  width: 900%;
-}
+
 /*****************************************************MOBILE ***********************************/
 
 @media only screen and (max-width: 440px) {
   h1 {
     font-size: 2rem;
   }
-.index-img {
-  width: 1400px;
-  height: 780px;
-  object-fit: cover ;
+  .index-img{
+    width: 100%;
+    padding-top: 30%;
+
   }
   .img-block img {
     width: 96%;
@@ -120,6 +133,7 @@ td :nth-of-type(0) {
   }
 
   /**********************************PAGES*******/
+
 
   .content-container {
     margin: 30% 0 13%;
@@ -145,6 +159,7 @@ td :nth-of-type(0) {
   .contact-text{
     border: 1px solid black;
   }
+
   /**********************************Footer*******/
 
   .logo {
@@ -161,10 +176,8 @@ td :nth-of-type(0) {
   h1 {
     font-size: 2rem;
   }
-  .index-img {
-  width: 1400px;
-  height: 780px;
-  object-fit: cover ;
+  .index-img{
+    width: 100%;
   }
   .content-container {
     margin-top: 13%;
@@ -206,7 +219,11 @@ td :nth-of-type(0) {
   .ex-imgs img {
     width: 45%;
   }
-
+  .ex-table td, tr{
+  vertical-align: baseline;
+  line-height: 1.3;
+  font-size: 1rem;
+ }
   /**********************************Footer*******/
 
   .logo {
@@ -225,7 +242,10 @@ td :nth-of-type(0) {
     font-size: 3rem;
   }
 
- 
+ .index-img{
+    width: 100%;
+    height: 1200px;
+  }
 
   /**********************************PAGES*******/
   .img-block {
@@ -262,7 +282,7 @@ td :nth-of-type(0) {
   }
 
   .pages-text {
-    width: 75%;
+    width: 72%;
     text-align: justify;
     margin: auto;
   }
@@ -362,10 +382,10 @@ nav{
    margin-bottom: 0;
  }
  .logo {
-   font-size: 2.4rem;
+   font-size: 3rem;
  }
  .copyright{
-   font-size: 1rem;
+   font-size: 1.2rem;
  }
   .img-block {
     justify-content: space-evenly;
@@ -375,9 +395,10 @@ nav{
     width: 20%;
     display: block;
   }
-  .index-img {
-    width: 1600px;
-    height: 780px;
-    object-fit: cover;
-}
+   .ex-table td, tr{
+  vertical-align: baseline;
+  line-height: 1.2;
+  font-size: 1.4rem;
+ }
+
 }
