--- a/public/style.css
+++ b/public/style.css
@@ -13,9 +13,14 @@ p {
   font-family: "Roboto";
   font-weight: bold;
 }
-.index{
+.index {
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+.index-img {
+  position: relative;
 }
 hr {
   border: none;
@@ -44,11 +49,9 @@ a:hover {
 }
 
 .avatar {
-
   display: block;
   margin-top: 9%;
 }
-
 
 /**********************************Footer*******/
 
@@ -84,22 +87,23 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.ex-table{
+.ex-table {
   display: flex;
   flex-direction: column;
-line-height: 1.2;
+  line-height: 1.2;
 }
 
-.ex-content table{
+.ex-content table {
   width: 100%;
 }
- .ex-table td, tr{
+.ex-table td,
+tr {
   vertical-align: baseline;
   line-height: 1.2;
   font-size: 0.9rem;
- }
+}
 
-.spaceinbetween{
+.space {
   visibility: hidden;
 }
 .awards {
@@ -109,18 +113,18 @@ line-height: 1.2;
   justify-content: unset;
 }
 
-
 /*****************************************************MOBILE ***********************************/
 
 @media only screen and (max-width: 440px) {
   h1 {
     font-size: 2rem;
   }
-  .index-img{
-    width: 100%;
-    padding-top: 30%;
 
+  .index-img {
+    position: fixed;
+    height: 1459px;
   }
+
   .img-block img {
     width: 96%;
     display: block;
@@ -132,7 +136,6 @@ line-height: 1.2;
   }
 
   /**********************************PAGES*******/
-
 
   .content-container {
     margin: 30% 0 13%;
@@ -155,7 +158,7 @@ line-height: 1.2;
     margin: 0 auto auto;
   }
 
-  .contact-text{
+  .contact-text {
     border: 1px solid black;
   }
 
@@ -168,7 +171,7 @@ line-height: 1.2;
   .copyright {
     font-size: 0.77rem;
   }
-  .avatar{
+  .avatar {
     width: 100%;
   }
 }
@@ -178,8 +181,10 @@ line-height: 1.2;
   h1 {
     font-size: 2rem;
   }
-  .index-img{
-    width: 100%;
+  .index {
+    height: 100%;
+  }
+  .index-img {
   }
   .content-container {
     margin-top: 13%;
@@ -221,12 +226,13 @@ line-height: 1.2;
   .ex-imgs img {
     width: 45%;
   }
-  .ex-table td, tr{
-  vertical-align: baseline;
-  line-height: 1.3;
-  font-size: 1rem;
- }
-  .avatar{
+  .ex-table td,
+  tr {
+    vertical-align: baseline;
+    line-height: 1.3;
+    font-size: 1rem;
+  }
+  .avatar {
     width: 70%;
     margin: 4% auto;
   }
@@ -248,9 +254,7 @@ line-height: 1.2;
     font-size: 3rem;
   }
 
- .index-img{
-    width: 100%;
-    height: 1200px;
+  .index-img {
   }
 
   /**********************************PAGES*******/
@@ -333,7 +337,6 @@ line-height: 1.2;
     line-height: 2.2;
   }
   .index-img {
-
   }
   .ex-imgs img {
     max-width: 38%;
@@ -356,7 +359,9 @@ line-height: 1.2;
   .content-container {
     margin: 6% 0 0;
   }
-
+  .index {
+    height: 100%;
+  }
   .img-block {
     justify-content: space-around;
     margin-bottom: 17%;
@@ -364,7 +369,6 @@ line-height: 1.2;
   .ex-imgs img {
     max-width: 30%;
   }
- =
 }
 
 @media only screen and (min-width: 1400px) {
@@ -381,21 +385,20 @@ line-height: 1.2;
   .img-block img {
     max-width: 33%;
   }
-nav{
-  font-size: 1.3rem;
-}
-.pages-text{
-  font-size: 1.4rem;
-}
- .container a{
-   margin-bottom: 0;
- }
- .logo {
-   font-size: 3rem;
- }
- .copyright{
-   font-size: 1.2rem;
- }
+  nav {
+    font-size: 1.3rem;
+  }
+  .pages-text {
+    font-size: 1.4rem;
+  }
+  .container a {
+    margin-bottom: 0;
+  }
+  .logo {
+    font-size: 2rem;
+  }
+  .copyright {
+  }
   .img-block {
     justify-content: space-evenly;
     margin-bottom: 21%;
@@ -403,10 +406,13 @@ nav{
   .avatar {
     width: 20%;
   }
-   .ex-table td, tr{
-  vertical-align: baseline;
-  line-height: 1.2;
-  font-size: 1.2rem;
- }
-
+  .ex-table td,
+  tr {
+    vertical-align: baseline;
+    line-height: 1.2;
+    font-size: 1.2rem;
+  }
+  .index {
+    height: 100%;
+  }
 }
